@@ -69,7 +69,7 @@ libvoikko_la_SOURCES = \
     grammar/check/SentenceCheck.cpp \
     compatibility/interface.cpp \
     autocorrect/AutoCorrect.cpp
-libvoikko_la_LDFLAGS = -no-undefined -version-info 12:0:11 @LIBLDFLAGSWIN@
+libvoikko_la_LDFLAGS = -no-undefined -version-info 13:0:12 @LIBLDFLAGSWIN@
 
 pkginclude_HEADERS = voikko.h voikko_enums.h voikko_defines.h voikko_deprecated.h voikko_structs.h
 noinst_HEADERS = \
