@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2010-05-11"
+.TH VOIKKOSPELL 1 "2010-06-01"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -111,5 +111,8 @@ can be either 0 (false) or 1 (true).
 .TP
 .B \-h, --help
 Print a help message and exit.
+.TP
+.B \-\-version
+Print version numbers for libvoikko and the test tool.
 .SH AUTHOR
 voikkospell and this manual page were written by \%Harri \%Pitk\[:a]nen \%(hatapitk@iki.fi).
